# VRSBench_dataloader

./: .gitignore  CHANGELOG.md  CONFIGURATION.md  EXAMPLE_LOGS.md  IMPLEMENTATION_SUMMARY.md  INDEX.md  NOTEBOOK_USAGE_GUIDE.md  PACKAGE_SUMMARY.md  QUICK_REFERENCE.md  README.md  TEST_REPORT.md  Testing models.md  Testing_model.md  example_classification.py  example_grounding.py  example_simplified_workflow.py  example_vqa.py  jupyter_setup.py  pyproject.toml  requirements.txt  setup.sh  setup_vrsbench.py  test_dataloader.py  test_dataloader_changes.py  vrsbench_dataloader_production.py
test_data/annotations/: captioning.jsonl  classification.jsonl  grounding.jsonl  test_missing.jsonl  vqa.jsonl
